<resources>
    <string name="app_name">Ballsbot Teleoperation</string>
    <string name="connections_list_title">Bots list</string>
    <string name="connection_edit_title">Edit connection</string>
    <string name="connection_create_title">Create connection</string>
    <string name="connection_info_title">Connection info</string>
    <string name="test_game_controller_title">Test game controller</string>
    <string name="add_new_connection">Add new</string>
    <string name="host_name_label">Host name</string>
    <string name="port_number_label">Port number</string>
    <string name="connect_label">Connect</string>
    <string name="edit_label">Edit</string>
    <string name="delete_label">Delete</string>
    <string name="save_label">Save</string>
    <string name="test_label">Test</string>
    <string name="cancel_label">Cancel</string>
    <string name="password_label">Password</string>
    <string name="description_label">Description</string>

    <string name="test_connection_invalid">Invalid connection parameters</string>
    <string name="test_connection_success">Connected successfully</string>
    <string name="test_connection_fail">Connection failed with %1$s</string>
    <string name="certificate_label">Certificate</string>
    <string name="front_camera_label">Front camera</string>
    <string name="rear_camera_label">Rear camera</string>
    <string name="test_game_controller">Test game controller</string>
    <string name="controller_id_label">Controller ID</string>
    <string name="button_a_label">Button A</string>
    <string name="button_b_label">Button B</string>
    <string name="button_x_label">Button X</string>
    <string name="button_y_label">Button Y</string>
    <string name="button_lb_title">Button LB</string>
    <string name="button_lt_title">Button LT</string>
    <string name="button_rb_title">Button RB</string>
    <string name="button_rt_title">Button RT</string>
    <string name="axis_lx_title">Axis LX</string>
    <string name="axis_ly_title">Axis LY</string>
    <string name="axis_rx_title">Axis RX</string>
    <string name="axis_ry_title">Axis RY</string>
    <string name="manipulator_xy_label">Manipulator XY</string>
    <string name="manipulator_xz_label">Manipulator XZ</string>
    <string name="lidar_cloud_title">Lidar cloud</string>
    <string name="manipulator_distance">Distance: %sm</string>
    <string name="battery_charge_label">Battery charge: %s%%</string>
    <string name="front_camera_detections_label">Front camera detections</string>
    <string name="enable_autopilot_label">Enable autopilot</string>
    <string name="select_a_mode">Select a mode</string>
</resources>