<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModelConnection"
            type="cc.jumper.ballsbot_teleoperation.models.ConnectionsViewModel" />

        <variable
            name="viewModelTeleoperation"
            type="cc.jumper.ballsbot_teleoperation.models.TeleoperationViewModel" />

        <variable
            name="thisFragment"
            type="cc.jumper.ballsbot_teleoperation.ui.main.TeleoperationFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.main.TeleoperationFragment" >

        <cc.jumper.ballsbot_teleoperation.ui.views.ManipulatorView
            android:id="@+id/manipulator_xy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/manipulator_distance"
            app:layout_constraintEnd_toStartOf="@+id/front_camera"
            android:contentDescription="@string/manipulator_xy_label" />

        <TextView
            android:id="@+id/manipulator_distance"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manipulator_xy"
            app:layout_constraintBottom_toTopOf="@+id/manipulator_xz"
            app:layout_constraintEnd_toStartOf="@+id/front_camera"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:gravity="center"
            tools:text="Distance: 200mm" />

        <cc.jumper.ballsbot_teleoperation.ui.views.ManipulatorView
            android:id="@+id/manipulator_xz"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manipulator_distance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/front_camera"
            android:contentDescription="@string/manipulator_xz_label" />

        <ImageView
            android:id="@+id/front_camera"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lidar_view"
            app:layout_constraintStart_toEndOf="@+id/manipulator_xy"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/front_camera_label"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/backgrounds/scenic" />

        <cc.jumper.ballsbot_teleoperation.ui.views.DetectionsView
            android:id="@+id/detections_front"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lidar_view"
            app:layout_constraintStart_toEndOf="@+id/manipulator_xy"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/front_camera_detections_label" />

        <ImageView
            android:id="@+id/rear_camera"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/front_camera"
            app:layout_constraintBottom_toTopOf="@+id/lidar_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/rear_camera_label"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/backgrounds/scenic" />

        <cc.jumper.ballsbot_teleoperation.ui.views.LidarView
            android:id="@+id/lidar_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/rear_camera"
            app:layout_constraintStart_toEndOf="@+id/front_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/lidar_cloud_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>