<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="cc.jumper.ballsbot_teleoperation.models.ConnectionsViewModel" />

        <variable
            name="thisFragment"
            type="cc.jumper.ballsbot_teleoperation.ui.main.EditConnectionFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:paddingBottom="@dimen/margin"
            tools:context=".ui.main.EditConnectionFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_description_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_host_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/host_name_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_description_label"
                app:layout_constraintEnd_toStartOf="@+id/item_port_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_host_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_port_label"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/port_number_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_description_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_port"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_key_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/key_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_port_label"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_key"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    tools:text="test" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> thisFragment.saveConnection()}"
                android:text="@string/save_label"
                app:layout_constraintStart_toStartOf="@+id/item_key_label"
                app:layout_constraintTop_toBottomOf="@+id/item_key_label" />

            <Button
                android:id="@+id/test_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:onClick="@{() -> thisFragment.testConnection()}"
                android:text="@string/test_label"
                app:layout_constraintStart_toEndOf="@+id/save_button"
                app:layout_constraintTop_toTopOf="@+id/save_button" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:onClick="@{() -> thisFragment.cancel()}"
                android:text="@string/cancel_label"
                app:layout_constraintStart_toEndOf="@+id/test_button"
                app:layout_constraintTop_toTopOf="@+id/save_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>