<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/connectionsListFragment">

    <fragment
        android:id="@+id/connectionsListFragment"
        android:name="cc.jumper.ballsbot_teleoperation.ui.main.ConnectionsListFragment"
        android:label="@string/connections_list_title"
        tools:layout="@layout/connections_list_fragment">
        <action
            android:id="@+id/action_connectionsListFragment_to_connectionInfoFragment"
            app:destination="@id/connectionInfoFragment" />
        <action
            android:id="@+id/action_connectionsListFragment_to_editConnectionFragment"
            app:destination="@id/editConnectionFragment" />
    </fragment>
    <fragment
        android:id="@+id/connectionInfoFragment"
        android:name="cc.jumper.ballsbot_teleoperation.ui.main.ConnectionInfoFragment"
        android:label="@string/connection_info_title"
        tools:layout="@layout/connection_info_fragment">
        <action
            android:id="@+id/action_connectionInfoFragment_to_editConnectionFragment"
            app:destination="@id/editConnectionFragment" />
        <action
            android:id="@+id/action_connectionInfoFragment_to_teleoperationFragment"
            app:destination="@id/teleoperationFragment" />
        <argument
            android:name="connectionId"
            app:argType="integer" />
        <action
            android:id="@+id/action_connectionInfoFragment_to_connectionsListFragment"
            app:destination="@id/connectionsListFragment"
            app:popUpTo="@id/connectionsListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editConnectionFragment"
        android:name="cc.jumper.ballsbot_teleoperation.ui.main.EditConnectionFragment"
        android:label="@string/connection_edit_title"
        tools:layout="@layout/edit_connection_fragment">
        <action
            android:id="@+id/action_editConnectionFragment_to_connectionInfoFragment"
            app:destination="@id/connectionInfoFragment"
            app:popUpTo="@id/connectionInfoFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_editConnectionFragment_to_connectionsListFragment"
            app:destination="@id/connectionsListFragment"
            app:popUpTo="@id/connectionsListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="connectionId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/teleoperationFragment"
        android:name="cc.jumper.ballsbot_teleoperation.ui.main.TeleoperationFragment"
        android:label="fragment_teleoperation"
        tools:layout="@layout/fragment_teleoperation" >
        <action
            android:id="@+id/action_teleoperationFragment_to_connectionsListFragment"
            app:destination="@id/connectionsListFragment"
            app:popUpTo="@id/connectionsListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="connectionId"
            app:argType="integer" />
    </fragment>
</navigation>